--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,7 +29,7 @@
 
 /* Models */
 @import "pages/models/table.css";
-@import "pages/models/cards.css";
+@import "pages/models/models-page.css";
 @import "pages/models/filters.css";
 
 /* Settings */
